crates/analyzer/tests/snapshots/analysis__return_builtin_attributes.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_builtin_attributes.fe:4:5
  │  
4 │ ╭     pub fn coinbase(ctx: Context) -> address:
5 │ │         return ctx.block_coinbase()
  │ ╰───────────────────────────────────^ attributes hash: 17345910255563017853
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: Some(
            Mutable,
        ),
        params: [
            FunctionParam {
                name: "ctx",
                typ: Ok(
                    Struct(
                        Struct {
                            name: "Context",
                            field_count: 0,
                        },
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Address,
            ),
        ),
    }

note: 
  ┌─ return_builtin_attributes.fe:5:16
  │
5 │         return ctx.block_coinbase()
  │                ^^^ Context: Memory

note: 
  ┌─ return_builtin_attributes.fe:5:16
  │
5 │         return ctx.block_coinbase()
  │                ^^^^^^^^^^^^^^^^^^^^ address: Value

note: 
  ┌─ return_builtin_attributes.fe:7:5
  │  
7 │ ╭     pub fn difficulty(ctx: Context) -> u256:
8 │ │         return ctx.block_difficulty()
  │ ╰─────────────────────────────────────^ attributes hash: 8461121747246443614
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: Some(
            Mutable,
        ),
        params: [
            FunctionParam {
                name: "ctx",
                typ: Ok(
                    Struct(
                        Struct {
                            name: "Context",
                            field_count: 0,
                        },
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
  ┌─ return_builtin_attributes.fe:8:16
  │
8 │         return ctx.block_difficulty()
  │                ^^^ Context: Memory

note: 
  ┌─ return_builtin_attributes.fe:8:16
  │
8 │         return ctx.block_difficulty()
  │                ^^^^^^^^^^^^^^^^^^^^^^ u256: Value

note: 
   ┌─ return_builtin_attributes.fe:10:5
   │  
10 │ ╭     pub fn number(ctx: Context) -> u256:
11 │ │         return ctx.block_number()
   │ ╰─────────────────────────────────^ attributes hash: 8461121747246443614
   │  
   = FunctionSignature {
         self_decl: None,
         ctx_decl: Some(
             Mutable,
         ),
         params: [
             FunctionParam {
                 name: "ctx",
                 typ: Ok(
                     Struct(
                         Struct {
                             name: "Context",
                             field_count: 0,
                         },
                     ),
                 ),
             },
         ],
         return_type: Ok(
             Base(
                 Numeric(
                     U256,
                 ),
             ),
         ),
     }

note: 
   ┌─ return_builtin_attributes.fe:11:16
   │
11 │         return ctx.block_number()
   │                ^^^ Context: Memory

note: 
   ┌─ return_builtin_attributes.fe:11:16
   │
11 │         return ctx.block_number()
   │                ^^^^^^^^^^^^^^^^^^ u256: Value

note: 
   ┌─ return_builtin_attributes.fe:13:5
   │  
13 │ ╭     pub fn timestamp(ctx: Context) -> u256:
14 │ │         return ctx.block_timestamp()
   │ ╰────────────────────────────────────^ attributes hash: 8461121747246443614
   │  
   = FunctionSignature {
         self_decl: None,
         ctx_decl: Some(
             Mutable,
         ),
         params: [
             FunctionParam {
                 name: "ctx",
                 typ: Ok(
                     Struct(
                         Struct {
                             name: "Context",
                             field_count: 0,
                         },
                     ),
                 ),
             },
         ],
         return_type: Ok(
             Base(
                 Numeric(
                     U256,
                 ),
             ),
         ),
     }

note: 
   ┌─ return_builtin_attributes.fe:14:16
   │
14 │         return ctx.block_timestamp()
   │                ^^^ Context: Memory

note: 
   ┌─ return_builtin_attributes.fe:14:16
   │
14 │         return ctx.block_timestamp()
   │                ^^^^^^^^^^^^^^^^^^^^^ u256: Value

note: 
   ┌─ return_builtin_attributes.fe:16:5
   │  
16 │ ╭     pub fn chainid(ctx: Context) -> u256:
17 │ │         return ctx.chain_id()
   │ ╰─────────────────────────────^ attributes hash: 8461121747246443614
   │  
   = FunctionSignature {
         self_decl: None,
         ctx_decl: Some(
             Mutable,
         ),
         params: [
             FunctionParam {
                 name: "ctx",
                 typ: Ok(
                     Struct(
                         Struct {
                             name: "Context",
                             field_count: 0,
                         },
                     ),
                 ),
             },
         ],
         return_type: Ok(
             Base(
                 Numeric(
                     U256,
                 ),
             ),
         ),
     }

note: 
   ┌─ return_builtin_attributes.fe:17:16
   │
17 │         return ctx.chain_id()
   │                ^^^ Context: Memory

note: 
   ┌─ return_builtin_attributes.fe:17:16
   │
17 │         return ctx.chain_id()
   │                ^^^^^^^^^^^^^^ u256: Value

note: 
   ┌─ return_builtin_attributes.fe:19:5
   │  
19 │ ╭     pub fn sender(ctx: Context) -> address:
20 │ │         return ctx.msg_sender()
   │ ╰───────────────────────────────^ attributes hash: 17345910255563017853
   │  
   = FunctionSignature {
         self_decl: None,
         ctx_decl: Some(
             Mutable,
         ),
         params: [
             FunctionParam {
                 name: "ctx",
                 typ: Ok(
                     Struct(
                         Struct {
                             name: "Context",
                             field_count: 0,
                         },
                     ),
                 ),
             },
         ],
         return_type: Ok(
             Base(
                 Address,
             ),
         ),
     }

note: 
   ┌─ return_builtin_attributes.fe:20:16
   │
20 │         return ctx.msg_sender()
   │                ^^^ Context: Memory

note: 
   ┌─ return_builtin_attributes.fe:20:16
   │
20 │         return ctx.msg_sender()
   │                ^^^^^^^^^^^^^^^^ address: Value

note: 
   ┌─ return_builtin_attributes.fe:22:5
   │  
22 │ ╭     pub fn value(ctx: Context) -> u256:
23 │ │         return ctx.msg_value()
   │ ╰──────────────────────────────^ attributes hash: 8461121747246443614
   │  
   = FunctionSignature {
         self_decl: None,
         ctx_decl: Some(
             Mutable,
         ),
         params: [
             FunctionParam {
                 name: "ctx",
                 typ: Ok(
                     Struct(
                         Struct {
                             name: "Context",
                             field_count: 0,
                         },
                     ),
                 ),
             },
         ],
         return_type: Ok(
             Base(
                 Numeric(
                     U256,
                 ),
             ),
         ),
     }

note: 
   ┌─ return_builtin_attributes.fe:23:16
   │
23 │         return ctx.msg_value()
   │                ^^^ Context: Memory

note: 
   ┌─ return_builtin_attributes.fe:23:16
   │
23 │         return ctx.msg_value()
   │                ^^^^^^^^^^^^^^^ u256: Value

note: 
   ┌─ return_builtin_attributes.fe:25:5
   │  
25 │ ╭     pub fn origin(ctx: Context) -> address:
26 │ │         return ctx.tx_origin()
   │ ╰──────────────────────────────^ attributes hash: 17345910255563017853
   │  
   = FunctionSignature {
         self_decl: None,
         ctx_decl: Some(
             Mutable,
         ),
         params: [
             FunctionParam {
                 name: "ctx",
                 typ: Ok(
                     Struct(
                         Struct {
                             name: "Context",
                             field_count: 0,
                         },
                     ),
                 ),
             },
         ],
         return_type: Ok(
             Base(
                 Address,
             ),
         ),
     }

note: 
   ┌─ return_builtin_attributes.fe:26:16
   │
26 │         return ctx.tx_origin()
   │                ^^^ Context: Memory

note: 
   ┌─ return_builtin_attributes.fe:26:16
   │
26 │         return ctx.tx_origin()
   │                ^^^^^^^^^^^^^^^ address: Value

note: 
   ┌─ return_builtin_attributes.fe:28:5
   │  
28 │ ╭     pub fn gas_price(ctx: Context) -> u256:
29 │ │         return ctx.tx_gas_price()
   │ ╰─────────────────────────────────^ attributes hash: 8461121747246443614
   │  
   = FunctionSignature {
         self_decl: None,
         ctx_decl: Some(
             Mutable,
         ),
         params: [
             FunctionParam {
                 name: "ctx",
                 typ: Ok(
                     Struct(
                         Struct {
                             name: "Context",
                             field_count: 0,
                         },
                     ),
                 ),
             },
         ],
         return_type: Ok(
             Base(
                 Numeric(
                     U256,
                 ),
             ),
         ),
     }

note: 
   ┌─ return_builtin_attributes.fe:29:16
   │
29 │         return ctx.tx_gas_price()
   │                ^^^ Context: Memory

note: 
   ┌─ return_builtin_attributes.fe:29:16
   │
29 │         return ctx.tx_gas_price()
   │                ^^^^^^^^^^^^^^^^^^ u256: Value


