crates/analyzer/tests/snapshots/analysis__return_empty_tuple.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/return_unit.fe\", &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "explicit_return_a1",
                        params: [],
                        return_type: Base(
                            Unit,
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "explicit_return_a2",
                        params: [],
                        return_type: Base(
                            Unit,
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "explicit_return_b1",
                        params: [],
                        return_type: Base(
                            Unit,
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "explicit_return_b2",
                        params: [],
                        return_type: Base(
                            Unit,
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "implicit_a1",
                        params: [],
                        return_type: Base(
                            Unit,
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "implicit_a2",
                        params: [],
                        return_type: Base(
                            Unit,
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/return_unit.fe:7:12
  │
7 │     return ()
  │            ^^ attributes hash: 513065555763557710
  │
  = ExpressionAttributes {
        typ: Base(
            Unit,
        ),
        location: Value,
        move_location: None,
    }

note: 
   ┌─ features/return_unit.fe:13:12
   │
13 │     return ()
   │            ^^ attributes hash: 513065555763557710
   │
   = ExpressionAttributes {
         typ: Base(
             Unit,
         ),
         location: Value,
         move_location: None,
     }

note: 
  ┌─ features/return_unit.fe:3:3
  │  
3 │ ╭   pub def explicit_return_a1():
4 │ │     return
  │ ╰──────────^ attributes hash: 15075410168300747903
  │  
  = FunctionAttributes {
        is_public: true,
        name: "explicit_return_a1",
        params: [],
        return_type: Base(
            Unit,
        ),
    }

note: 
  ┌─ features/return_unit.fe:6:3
  │  
6 │ ╭   pub def explicit_return_a2():
7 │ │     return ()
  │ ╰─────────────^ attributes hash: 16304827799292902014
  │  
  = FunctionAttributes {
        is_public: true,
        name: "explicit_return_a2",
        params: [],
        return_type: Base(
            Unit,
        ),
    }

note: 
   ┌─ features/return_unit.fe:9:3
   │  
 9 │ ╭   pub def explicit_return_b1() -> ():
10 │ │     return
   │ ╰──────────^ attributes hash: 15035223921056621731
   │  
   = FunctionAttributes {
         is_public: true,
         name: "explicit_return_b1",
         params: [],
         return_type: Base(
             Unit,
         ),
     }

note: 
   ┌─ features/return_unit.fe:12:3
   │  
12 │ ╭   pub def explicit_return_b2() -> ():
13 │ │     return ()
   │ ╰─────────────^ attributes hash: 2893054146685256717
   │  
   = FunctionAttributes {
         is_public: true,
         name: "explicit_return_b2",
         params: [],
         return_type: Base(
             Unit,
         ),
     }

note: 
   ┌─ features/return_unit.fe:15:3
   │  
15 │ ╭   pub def implicit_a1():
16 │ │     pass
   │ ╰────────^ attributes hash: 12364371827553425931
   │  
   = FunctionAttributes {
         is_public: true,
         name: "implicit_a1",
         params: [],
         return_type: Base(
             Unit,
         ),
     }

note: 
   ┌─ features/return_unit.fe:18:3
   │  
18 │ ╭   pub def implicit_a2() -> ():
19 │ │     pass
   │ ╰────────^ attributes hash: 12198633077641647917
   │  
   = FunctionAttributes {
         is_public: true,
         name: "implicit_a2",
         params: [],
         return_type: Base(
             Unit,
         ),
     }

note: 
   ┌─ features/return_unit.fe:1:1
   │  
 1 │ ╭ contract Foo:
 2 │ │ 
 3 │ │   pub def explicit_return_a1():
 4 │ │     return
   · │
18 │ │   pub def implicit_a2() -> ():
19 │ │     pass
   │ ╰────────^ attributes hash: 7602391269202270144
   │  
   = ContractAttributes {
         public_functions: [
             FunctionAttributes {
                 is_public: true,
                 name: "explicit_return_a1",
                 params: [],
                 return_type: Base(
                     Unit,
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "explicit_return_a2",
                 params: [],
                 return_type: Base(
                     Unit,
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "explicit_return_b1",
                 params: [],
                 return_type: Base(
                     Unit,
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "explicit_return_b2",
                 params: [],
                 return_type: Base(
                     Unit,
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "implicit_a1",
                 params: [],
                 return_type: Base(
                     Unit,
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "implicit_a2",
                 params: [],
                 return_type: Base(
                     Unit,
                 ),
             },
         ],
         init_function: None,
         events: [],
         structs: [],
         external_contracts: [],
     }

note: 
  ┌─ features/return_unit.fe:9:35
  │
9 │   pub def explicit_return_b1() -> ():
  │                                   ^^ attributes hash: 574436082528610497
  │
  = Base(
        Unit,
    )

note: 
   ┌─ features/return_unit.fe:12:35
   │
12 │   pub def explicit_return_b2() -> ():
   │                                   ^^ attributes hash: 574436082528610497
   │
   = Base(
         Unit,
     )

note: 
   ┌─ features/return_unit.fe:18:28
   │
18 │   pub def implicit_a2() -> ():
   │                            ^^ attributes hash: 574436082528610497
   │
   = Base(
         Unit,
     )


