crates/analyzer/tests/snapshots/analysis__return_identity_u256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_identity_u256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u256) -> u256:
3 │ │         return x
  │ ╰────────────────^ attributes hash: 10491700091878076414
  │  
  = FunctionSignature {
        self_decl: None,
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
  ┌─ return_identity_u256.fe:3:16
  │
3 │         return x
  │                ^ u256: Value


