crates/analyzer/tests/snapshots/analysis__return_mod_i256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/return_mod_i256.fe\", &src, module, &db)"

---
note: 
  ┌─ features/return_mod_i256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: i256, y: i256) -> i256:
3 │ │         return x % y
  │ ╰────────────────────^ attributes hash: 4860075934425578454
  │  
  = FunctionSignature {
        self_decl: None,
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            I256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "y",
                typ: Ok(
                    Base(
                        Numeric(
                            I256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    I256,
                ),
            ),
        ),
    }

note: 
  ┌─ features/return_mod_i256.fe:3:16
  │
3 │         return x % y
  │                ^   ^ i256: Value
  │                │    
  │                i256: Value

note: 
  ┌─ features/return_mod_i256.fe:3:16
  │
3 │         return x % y
  │                ^^^^^ i256: Value


