crates/analyzer/tests/snapshots/analysis__return_noteq_u256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/return_noteq_u256.fe\", &src, module, &db)"

---
note: 
  ┌─ features/return_noteq_u256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u256, y: u256) -> bool:
3 │ │         return x != y
  │ ╰─────────────────────^ attributes hash: 17032633651560910701
  │  
  = FunctionSignature {
        self_decl: None,
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "y",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Bool,
            ),
        ),
    }

note: 
  ┌─ features/return_noteq_u256.fe:3:16
  │
3 │         return x != y
  │                ^    ^ u256: Value
  │                │     
  │                u256: Value

note: 
  ┌─ features/return_noteq_u256.fe:3:16
  │
3 │         return x != y
  │                ^^^^^^ bool: Value


