crates/analyzer/tests/snapshots/analysis__return_pow_i256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/return_pow_i256.fe\", &src, module, &db)"

---
note: 
  ┌─ features/return_pow_i256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: i8, y: u8) -> i8:
3 │ │         return x ** y
  │ ╰─────────────────────^ attributes hash: 1717983320838236036
  │  
  = FunctionSignature {
        self_decl: None,
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            I8,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "y",
                typ: Ok(
                    Base(
                        Numeric(
                            U8,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    I8,
                ),
            ),
        ),
    }

note: 
  ┌─ features/return_pow_i256.fe:3:16
  │
3 │         return x ** y
  │                ^ i8: Value => None

note: 
  ┌─ features/return_pow_i256.fe:3:21
  │
3 │         return x ** y
  │                     ^ u8: Value => None

note: 
  ┌─ features/return_pow_i256.fe:3:16
  │
3 │         return x ** y
  │                ^^^^^^ i8: Value => None


