crates/analyzer/tests/snapshots/analysis__return_u128_cast.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_u128_cast.fe:2:5
  │  
2 │ ╭     pub fn bar() -> u128:
3 │ │         return u128(42)
  │ ╰───────────────────────^ attributes hash: 104322826323649285
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: None,
        params: [],
        return_type: Ok(
            Base(
                Numeric(
                    U128,
                ),
            ),
        ),
    }

note: 
  ┌─ return_u128_cast.fe:3:21
  │
3 │         return u128(42)
  │                     ^^ u128: Value

note: 
  ┌─ return_u128_cast.fe:3:16
  │
3 │         return u128(42)
  │                ^^^^^^^^ u128: Value


