crates/analyzer/tests/snapshots/analysis__return_u256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_u256.fe:2:5
  │  
2 │ ╭     pub fn bar() -> u256:
3 │ │         return 42
  │ ╰─────────────────^ attributes hash: 6115314201970082834
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: None,
        params: [],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
  ┌─ return_u256.fe:3:16
  │
3 │         return 42
  │                ^^ u256: Value


