crates/analyzer/tests/snapshots/analysis__return_u256_from_called_fn.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_u256_from_called_fn.fe:2:5
  │  
2 │ ╭     pub fn bar(self) -> u256 {
3 │ │         return foo()
4 │ │     }
  │ ╰─────^ attributes hash: 4631522600413788694
  │  
  = FunctionSignature {
        self_decl: Some(
            SelfDecl {
                kind: Ref,
                span: 30..34,
            },
        ),
        ctx_decl: None,
        params: [],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
  ┌─ return_u256_from_called_fn.fe:3:16
  │
3 │         return foo()
  │                ^^^^^ u256: Value

note: 
  ┌─ return_u256_from_called_fn.fe:6:5
  │  
6 │ ╭     pub fn foo() -> u256 {
7 │ │         return 42
8 │ │     }
  │ ╰─────^ attributes hash: 6115314201970082834
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: None,
        params: [],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
  ┌─ return_u256_from_called_fn.fe:7:16
  │
7 │         return 42
  │                ^^ u256: Value


