crates/analyzer/tests/snapshots/analysis__return_u256_from_called_fn_with_args.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/return_u256_from_called_fn_with_args.fe\", &src,\n               module, &db)"

---
note: 
  ┌─ features/return_u256_from_called_fn_with_args.fe:2:5
  │
2 │     baz: Map<u256, u256>
  │     ^^^^^^^^^^^^^^^^^^^^ Map<u256, u256>

note: 
  ┌─ features/return_u256_from_called_fn_with_args.fe:3:5
  │  
3 │ ╭     pub fn foo(val1: u256, val2: u256, val3: u256, val4: u256, val5: u256) -> u256:
4 │ │         return val1 + val2 + val3 + val4 + val5
  │ ╰───────────────────────────────────────────────^ attributes hash: 4629287087811571223
  │  
  = FunctionSignature {
        self_decl: None,
        params: [
            FunctionParam {
                name: "val1",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "val2",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "val3",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "val4",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "val5",
                typ: Ok(
                    Base(
                        Numeric(
                            U256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
  ┌─ features/return_u256_from_called_fn_with_args.fe:6:5
  │  
6 │ ╭     pub fn cem() -> u256:
7 │ │         return 100
  │ ╰──────────────────^ attributes hash: 17979516652885443340
  │  
  = FunctionSignature {
        self_decl: None,
        params: [],
        return_type: Ok(
            Base(
                Numeric(
                    U256,
                ),
            ),
        ),
    }

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:9:5
   │  
 9 │ ╭     pub fn bar(self) -> u256:
10 │ │         self.baz[0] = 43
11 │ │         return foo(5, 2, cem(), 25 + 25, self.baz[0])
   │ ╰─────────────────────────────────────────────────────^ attributes hash: 16482263331346774611
   │  
   = FunctionSignature {
         self_decl: Mutable,
         params: [],
         return_type: Ok(
             Base(
                 Numeric(
                     U256,
                 ),
             ),
         ),
     }

note: 
  ┌─ features/return_u256_from_called_fn_with_args.fe:4:16
  │
4 │         return val1 + val2 + val3 + val4 + val5
  │                ^^^^ u256: Value => None

note: 
  ┌─ features/return_u256_from_called_fn_with_args.fe:4:23
  │
4 │         return val1 + val2 + val3 + val4 + val5
  │                       ^^^^ u256: Value => None

note: 
  ┌─ features/return_u256_from_called_fn_with_args.fe:4:16
  │
4 │         return val1 + val2 + val3 + val4 + val5
  │                ^^^^^^^^^^^ u256: Value => None

note: 
  ┌─ features/return_u256_from_called_fn_with_args.fe:4:30
  │
4 │         return val1 + val2 + val3 + val4 + val5
  │                              ^^^^ u256: Value => None

note: 
  ┌─ features/return_u256_from_called_fn_with_args.fe:4:16
  │
4 │         return val1 + val2 + val3 + val4 + val5
  │                ^^^^^^^^^^^^^^^^^^ u256: Value => None

note: 
  ┌─ features/return_u256_from_called_fn_with_args.fe:4:37
  │
4 │         return val1 + val2 + val3 + val4 + val5
  │                                     ^^^^ u256: Value => None

note: 
  ┌─ features/return_u256_from_called_fn_with_args.fe:4:16
  │
4 │         return val1 + val2 + val3 + val4 + val5
  │                ^^^^^^^^^^^^^^^^^^^^^^^^^ u256: Value => None

note: 
  ┌─ features/return_u256_from_called_fn_with_args.fe:4:44
  │
4 │         return val1 + val2 + val3 + val4 + val5
  │                                            ^^^^ u256: Value => None

note: 
  ┌─ features/return_u256_from_called_fn_with_args.fe:4:16
  │
4 │         return val1 + val2 + val3 + val4 + val5
  │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ u256: Value => None

note: 
  ┌─ features/return_u256_from_called_fn_with_args.fe:7:16
  │
7 │         return 100
  │                ^^^ u256: Value => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:10:9
   │
10 │         self.baz[0] = 43
   │         ^^^^^^^^ Map<u256, u256>: Storage { nonce: Some(0) } => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:10:18
   │
10 │         self.baz[0] = 43
   │                  ^ u256: Value => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:10:9
   │
10 │         self.baz[0] = 43
   │         ^^^^^^^^^^^ u256: Storage { nonce: None } => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:10:23
   │
10 │         self.baz[0] = 43
   │                       ^^ u256: Value => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:11:20
   │
11 │         return foo(5, 2, cem(), 25 + 25, self.baz[0])
   │                    ^ u256: Value => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:11:23
   │
11 │         return foo(5, 2, cem(), 25 + 25, self.baz[0])
   │                       ^ u256: Value => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:11:26
   │
11 │         return foo(5, 2, cem(), 25 + 25, self.baz[0])
   │                          ^^^^^ u256: Value => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:11:33
   │
11 │         return foo(5, 2, cem(), 25 + 25, self.baz[0])
   │                                 ^^ u256: Value => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:11:38
   │
11 │         return foo(5, 2, cem(), 25 + 25, self.baz[0])
   │                                      ^^ u256: Value => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:11:33
   │
11 │         return foo(5, 2, cem(), 25 + 25, self.baz[0])
   │                                 ^^^^^^^ u256: Value => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:11:42
   │
11 │         return foo(5, 2, cem(), 25 + 25, self.baz[0])
   │                                          ^^^^^^^^ Map<u256, u256>: Storage { nonce: Some(0) } => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:11:51
   │
11 │         return foo(5, 2, cem(), 25 + 25, self.baz[0])
   │                                                   ^ u256: Value => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:11:42
   │
11 │         return foo(5, 2, cem(), 25 + 25, self.baz[0])
   │                                          ^^^^^^^^^^^ u256: Storage { nonce: None } => Some(Value)

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:11:16
   │
11 │         return foo(5, 2, cem(), 25 + 25, self.baz[0])
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ u256: Value => None

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:11:16
   │
11 │         return foo(5, 2, cem(), 25 + 25, self.baz[0])
   │                ^^^ attributes hash: 6251600114237252411
   │
   = Pure(
         FunctionId(
             0,
         ),
     )

note: 
   ┌─ features/return_u256_from_called_fn_with_args.fe:11:26
   │
11 │         return foo(5, 2, cem(), 25 + 25, self.baz[0])
   │                          ^^^ attributes hash: 6696068954755293271
   │
   = Pure(
         FunctionId(
             1,
         ),
     )


