crates/analyzer/tests/snapshots/analysis__self_address.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/self_address.fe\", &src, module, &db)"

---
note: 
  ┌─ features/self_address.fe:2:5
  │  
2 │ ╭     pub fn my_address(self) -> address:
3 │ │         return self.address
  │ ╰───────────────────────────^ attributes hash: 17651916811868111914
  │  
  = FunctionSignature {
        self_decl: Mutable,
        params: [],
        return_type: Ok(
            Base(
                Address,
            ),
        ),
    }

note: 
  ┌─ features/self_address.fe:3:16
  │
3 │         return self.address
  │                ^^^^^^^^^^^^ address: Value => None


